# matrix-multiplication-search

./: .clang-format  .gitignore  README.md
profiler/: search_ils_staged_77_10_30s.ncu-rep  search_ils_staged_77_10_30s_nsys.nsys-rep  search_ils_staged_enhance_77_10_30s.ncu-rep
workspace/: CMakeLists.txt  README  run_gdb.sh
workspace/src/: CMakeLists.txt
workspace/src/backend/: 3DM_to_SAT.cpp  CMakeLists.txt  GpuTask.cpp  Permutation.cpp  Puz.cpp  TDM.cpp  TDM_cuda.cu  TDM_cuda_enhanced.cu  bloom_filtering.cpp  canonization.cpp  checker.cpp  fitness.cpp  heuristic.cpp  ils_stage.cpp  matching.cpp  prg.cpp  search.cpp  set.cpp  special.cpp  stats.cpp
workspace/src/backend/includes/: 3DM_to_MIP.h  3DM_to_SAT.h  BoundedPuzPriorityQueue.h  GpuTask.h  Permutation.h  Puz.h  TDM.h  TDM_cuda.h  TDM_cuda_enhanced.h  bloom_filtering.h  canonization.h  checker.h  constants.h  elt_type.h  fitness.h  heuristic.h  ils_stage.h  matching.h  prg.h  search.h  set.h  special.h  stats.h  utils.h
workspace/src/searchers/: CMakeLists.txt  search_ils_staged.cpp  search_ils_staged_enhance.cpp
